# FA_r1

./: CMakeLists.txt
src/: farule1.cpp  farule1.hpp
